--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body>
     <header>
         <nav>
-
         </nav>
 
         <h1 class="titleHeader">
             Encontre o instrumento músical perfeito
         </h1>
         
-        <p class="textFirstBanner">
+        <p class="textHeaderBanner">
             Diversidade, qualidade e preços que fazem música
         </p>
 
@@ -41,7 +40,7 @@
                 Top Acordes
             </h2>
 
-            <section class="productLine">
+            <div class="productLine">
                 <article class="bigProductCard">
                     <figure>
                         <img src="user/src/telaHome/violao01.png">
@@ -69,7 +68,7 @@
                         <figcaption> California Vintage </figcaption>
                     </figure>
                 </article>
-            </section>
+            </div>
         </section>   
 
         <section class="secondBanner">
@@ -92,6 +91,42 @@
         </section>
         
         <section class="thirdBanner">
+            <h2 class="titleBanner">
+                Nossas Categorias
+            </h2>
+
+            <div class="categoryLine">
+                <figure>
+                    <img src="user/src/telaHome/cordas.jpeg" alt="Categoria Cordas"/>
+                    <figcaption>
+                        Cordas
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="user/src/telaHome/teclados.jpeg" alt="Categoria Teclados"/>
+                    <figcaption>
+                        Teclados
+                    </figcaption>
+                </figure>        
+                <figure>
+                    <img src="user/src/telaHome/eletronicos.jpeg" alt="Categoria Eletronicos"/>
+                    <figcaption>
+                        Eletrônicos
+                    </figcaption>
+                </figure>        
+                <figure>
+                    <img src="user/src/telaHome/percusao.jpeg" alt="Categoria Percusão"/>
+                    <figcaption>
+                        Percussão
+                    </figcaption>
+                </figure>        
+                <figure>
+                    <img src="user/src/telaHome/sopro.jpeg" alt="Categoria Sopro"/>
+                    <figcaption>
+                        Sopro
+                    </figcaption>
+                </figure>        
+            </div>
 
         </section>
 
