--- a/index.html
+++ b/index.html
@@ -3,40 +3,39 @@
     <head>
         <meta charset="UTF-8"/>
         <title> Virtuose </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="user/style.css">     
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="description" content="Loja de instrumentos musicais. Compre guitarras, violões, teclados e muito mais na Virtuose."/>
+        <link rel="stylesheet" href="user/style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
     </head>
-
     <body>
         <!-- Header -->
         <header class = mainHeader>
             <!-- Aba de Navegação -->
             <nav class="navBar">
                 <ul class="conteiner">
-                    <li><a href="homePage.html"><img src="user/icons/logo.svg" class="logo" alt="Logo"/></a></li>               
+                    <li><a href="user/login.html"><img src="user/icons/logo.svg" class="logo" alt="Logo da Virtuose"/></a></li>
                     <li>
                         <form class="searchBar"> 
                             <input type="search" placeholder="Procurar"/>
-                            <a href="user/login.html"><img src="user/icons/navBarIcons/searchIcon.svg" alt="Ícone de pesquisa"></a>
+                            <a href="user/login.html"><img src="user/icons/navBarIcons/searchIcon.svg" alt="Ícone de pesquisa."/></a>
                         </form>
                     </li>
                     <li>
                         <ul class="navIcons">
-                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/infoIcon.svg" alt="Ícone de informação"/> Sobre Nós </a></li>
-                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/productsIcon.svg" alt="Ícone de produtos"/> Produtos </a></li>
-                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/cartIcon.svg" alt="Ícone de carrinho"/> Carrinho </a></li>
-                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/perfilIcon.svg" alt="Ícone de perfil"/> Sua conta </a></li>
+                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/infoIcon.svg" alt="Ícone de informação."/> Sobre Nós </a></li>
+                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/productsIcon.svg" alt="Ícone de produtos."/> Produtos </a></li>
+                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/cartIcon.svg" alt="Ícone de carrinho."/> Carrinho </a></li>
+                            <li><a href="user/login.html"><img src="user/icons/navBarIcons/perfilIcon.svg" alt="Ícone de perfil."/> Sua conta </a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
-            
             <!-- Primeiro Banner da Tela Home -->
             <section class="firstBanner">
-                <article class="conteiner" >
+                <article class="conteiner">
                     <div> <!-- "div" utlizada para realizar o alinhamento no primeiro banner do site -->
                         <h1 class="titleFirstBanner"> Encontre o instrumento músical perfeito </h1>
                         <p class="textHome"> Diversidade, qualidade e preços que fazem música. </p>
@@ -47,81 +46,85 @@
                     </div>
                 </article>
                 <figure>
-                    <img src="user/src/telaHome/instrumentos.svg" alt="Conjunto de intrumentos musicais"/>
+                    <a href="user/login.html"> <img src="user/src/telaHome/instrumentos.svg" alt="Conjunto de intrumentos musicais em forma de vetor."/></a>
                 </figure>
             </section>
         </header>
-
         <!-- Conteúdo Principal da Página -->
         <main>
             <!-- Aba de Produtos da Tela Home -->
             <section class = "topAcordes">
                 <h2 class="titleHome"> Top Acordes </h2>
                 <div class="productLine"> <!-- "div" utilizada para englobar os cards, para ajustar seu posicionamento -->
-                    <article class="bigProductCard">
+                    <a href="user/login.html" class="bigProductCard">
                         <figure>
-                            <img src="user/src/telaHome/violao01.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> California Vintage </h3></figcaption>
+                            <img src="user/src/telaHome/violao01.png" alt="Imagem de um violão como produto do site."/>
+                            <figcaption>
+                                <h3> California Vintage </h3>
+                            </figcaption>
                         </figure>
-                    </article>
-                    <article class="bigProductCard">
+                    </a>
+                    <a href="user/login.html" class="bigProductCard">
                         <figure>
-                            <img src="user/src/telaHome/violao02.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> Colorado Auditorium </h3></figcaption>
+                            <img src="user/src/telaHome/violao02.png" alt="Imagem de um violão como produto do site."/>
+                            <figcaption>
+                                <h3> Colorado Auditorium </h3>
+                            </figcaption>
                         </figure>
-                    </article>
-                    <article class="bigProductCard">
+                    </a>
+                    <a href="user/login.html" class="bigProductCard">
                         <figure>
-                            <img src="user/src/telaHome/violao03.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> California King </h3></figcaption>
+                            <img src="user/src/telaHome/violao03.png" alt="Imagem de um violão como produto do site."/>
+                            <figcaption>
+                                <h3> California King </h3>
+                            </figcaption>
                         </figure>
-                    </article>
-                    <article class="bigProductCard">
+                    </a>
+                    <a href="user/login.html" class="bigProductCard">
                         <figure>
-                            <img src="user/src/telaHome/violao04.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> Dreadnought </h3></figcaption>
+                            <img src="user/src/telaHome/violao04.png" alt="Imagem de um violão como produto do site."/>
+                            <figcaption>
+                                <h3> Dreadnought </h3>
+                            </figcaption>
                         </figure>
-                    </article>
+                    </a>
                 </div>
             </section>
-
             <!-- Segundo Banner da Tela Home -->
             <section class="secondBanner">
-                <figure> <img src="user/src/telaHome/ukuleles.png" alt="Banner com diversos ukuleles"/> </figure>
+                <figure> <img src="user/src/telaHome/ukuleles.png" alt="Banner com diversos ukuleles."/> </figure>
                 <article>
                     <h2 class = "titleHome"> Sua trilha sonora de inverno </h2>
                     <p class="textHome"> Aqueça seus dias frios com os acordes do ukulele. Modelos cheios de charme, timbres e estilo durante essa estação. </p>
                     <a href="user/login.html" class="primaryButton"> Compre agora </a>
                 </article>
             </section>
-            
             <!-- Aba de Categorias -->
-            <section class="category"> 
+            <section class="category">
                 <h2 class="titleHome"> Nossas Categorias </h2>
                 <div class="categoryLine"> <!-- "div" utilizada para englobar os cars, para ajustar seu posicionamento -->
                     <a href="user/login.html">
-                        <img src="user/src/telaHome/cordas.jpeg" alt="Categoria Cordas"/>
+                        <img src="user/src/telaHome/cordas.jpeg" alt="Imagem de um violao representando a categoria de cordas."/>
                         <h3> Cordas </h3>
                     </a>
                     <a href="user/login.html">
-                        <img src="user/src/telaHome/teclados.jpeg" alt="Categoria Teclados"/>
+                        <img src="user/src/telaHome/teclados.jpeg" alt="Imagem d eum piano representando a categoria de teclados."/>
                         <h3> Teclados </h3>
-                    </a>        
+                    </a>
                     <a href="user/login.html">
-                        <img src="user/src/telaHome/eletronicos.jpeg" alt="Categoria Eletronicos"/>
+                        <img src="user/src/telaHome/eletronicos.jpeg" alt="Imagem de um sintetizador representando a categoria de eletrônicos."/>
                         <h3> Eletrônicos </h3>
-                    </a>        
+                    </a>
                     <a href="user/login.html">
-                        <img src="user/src/telaHome/percusao.jpeg" alt="Categoria Percusão"/>
+                        <img src="user/src/telaHome/percusao.jpeg" alt="Imagem de uma bateria representando a categoria de precussão."/>
                         <h3> Percussão </h3>
-                    </a>        
+                    </a>
                     <a href="user/login.html">
-                        <img src="user/src/telaHome/sopro.jpeg" alt="Categoria Sopro"/>
+                        <img src="user/src/telaHome/sopro.jpeg" alt="Imagem de uma flauta doce representando a categoria de sopro."/>
                         <h3> Sopro </h3>
-                    </a>        
+                    </a>
                 </div>
             </section>
-
             <!-- Seção Sobre Nós -->
             <section class="aboutUs">
                 <article>
@@ -130,26 +133,26 @@
                     <a href="user/login.html" class="buttonAboutUs"> Compre agora </a>
                 </article>
             </section>
-
             <!-- Vantagens -->
             <section>
                 <aside class="advantages">
-                    <div class="advantage"> <!-- As divis estão sendo utilizadas durante essa seção por conta do alinhamento dposicionamento do icone e do texto dentro da tag aside.-->
+                    <div class="advantage">
+                        <!-- As divis estão sendo utilizadas durante essa seção por conta do alinhamento dposicionamento do icone e do texto dentro da tag aside.-->
                         <img src="user/icons/featuresIcons/securityIcon.svg" alt="Ícone de Segurança"/>
                         <p> Produtos certificados e testados em rigorosos testes de excelência. </p>
                     </div>
-                    <div class="advantage"> 
+                    <div class="advantage">
                         <img src="user/icons/featuresIcons/suportIcon.svg" alt="Ícone de Suporte"/>
                         <p> Conte com a ajuda do nosso suporte para tirar dúvidas. </p>
                     </div>
-                    <div class="advantage"> 
+                    <div class="advantage">
                         <img src="user/icons/featuresIcons/returnsIcon.svg" alt="Ícone de Retorno"/>
                         <p> Devolução ou troca sem burocracia em até 30 dias após a entrega. </p>
                     </div>
                 </aside>
             </section>
         </main>
-
+        <!-- Footer -->
         <footer class="footer">
             <section class = "newsLetter">
                 <h3> Não perca nada! </h3>
@@ -159,11 +162,12 @@
                     <a href="user/login.html"><img src="user/icons/footerIcons/arrowIcon.svg" alt="Seta para direita"/></a>
                 </form>
             </section>
-            <hr class="line"/>
+            <hr class="footerLine"/>
             <div class = "linksFooter"> <!-- "div" utilizada para definir e delimitar o espaço dos links no footer -->
-                <article class = "links">
+                <article class = "links"> <!-- Links do footer, o usuário pode navegar para certas páginas através deles -->
                     <h4> Produtos </h4>
-                    <div class = "productsLinks"> <!-- "div" utilizada para separar a lista em dois espaços diferentes-->
+                    <div class = "productsLinks">
+                        <!-- "div" utilizada para separar a lista em dois espaços diferentes-->
                         <div> <!-- "div" usada para alinhamento -->
                             <ul>
                                 <li><a href="user/login.html"> Violões </a></li>
@@ -173,7 +177,7 @@
                             </ul>
                         </div>
                         <div> <!-- "div" usada para alinhamento -->
-                            <ul>    
+                            <ul>
                                 <li><a href="user/login.html"> Baterias </a></li>
                                 <li><a href="user/login.html"> Violinos </a></li>
                                 <li><a href="user/login.html"> Teclados </a></li>
@@ -188,7 +192,6 @@
                         <li><a href="user/login.html"> Sobre nós </a></li>
                         <li><a href="user/login.html"> Fale conosco </a></li>
                         <li><a href="user/login.html"> Dúvidas </a></li>
-                        <li><a href="user/login.html"> Politica de privacidade </a></li>
                     </ul>
                 </article>
                 <article class = "links">
@@ -199,7 +202,7 @@
                     </ul>
                 </article>
             </div>
-            <hr class="line"/>
+            <hr class="footerLine"/>
             <section class="copyright">
                 <ul>
                     <li><a href="user/login.html"> Política de Privacidade </a></li>
