--- a/user/homePage.html
+++ b/user/homePage.html
@@ -3,181 +3,183 @@
     <head>
         <meta charset="UTF-8"/>
         <title> Virtuose </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
     </head>
-
     <body>
         <!-- Header -->
         <header class = mainHeader>
             <!-- Aba de Navegação -->
             <nav class="navBar">
                 <ul class="conteiner">
-                    <li><a href="homePage.html"><img src="icons/logo.svg" class="logo" alt="Logo"/></a></li>               
+                    <li><a href="homePage.html"><img src="icons/logo.svg" class="logo" alt="Logo da Virtuose"/></a></li>
                     <li>
                         <form class="searchBar"> 
                             <input type="search" placeholder="Procurar"/>
-                            <a><img src="icons/navBarIcons/searchIcon.svg" alt="Ícone de pesquisa"></a>
+                            <a href="#"><img src="icons/navBarIcons/searchIcon.svg" alt="Ícone de pesquisa"/></a>
                         </form>
                     </li>
                     <li>
                         <ul class="navIcons">
-                            <li><a href=""><img src="icons/navBarIcons/infoIcon.svg" alt="Ícone de informação"/> Sobre Nós </a></li>
+                            <li><a href="aboutUs.html"><img src="icons/navBarIcons/infoIcon.svg" alt="Ícone de informação"/> Sobre Nós </a></li>
                             <li><a href="products.html"><img src="icons/navBarIcons/productsIcon.svg" alt="Ícone de produtos"/> Produtos </a></li>
                             <li><a href="cart.html"><img src="icons/navBarIcons/cartIcon.svg" alt="Ícone de carrinho"/> Carrinho </a></li>
-                            <li><a href="login.html"><img src="icons/navBarIcons/perfilIcon.svg" alt="Ícone de perfil"/> Sua conta </a></li>
+                            <li><a href="account.html"><img src="icons/navBarIcons/perfilIcon.svg" alt="Ícone de perfil"/> Sua conta </a></li>
                         </ul>
                     </li>
                 </ul>
             </nav>
-            
             <!-- Primeiro Banner da Tela Home -->
             <section class="firstBanner">
                 <article class="conteiner" >
-                    <div> <!-- "div" utlizada para realizar o alinhamento no primeiro banner do site -->
+                    <div> <!-- "div" utlizada para realizar o alinhamento do texto no banner -->
                         <h1 class="titleFirstBanner"> Encontre o instrumento músical perfeito </h1>
                         <p class="textHome"> Diversidade, qualidade e preços que fazem música. </p>
                     </div>
-                    <div>
-                        <a class="primaryButton"> Compre já </a>
+                    <div> <!-- "div" utlizada para realizar o alinhamento do texto no banner -->
+                        <a href="products.html" class="primaryButton"> Compre já </a>
                         <p class="subTextHome"> Entregamos emoção em forma de música para todo Brasil. </p>
                     </div>
                 </article>
                 <figure>
-                    <img src="src/telaHome/instrumentos.svg" alt="Conjunto de intrumentos musicais"/>
+                    <a href="products.html"> <img src="src/telaHome/instrumentos.svg" alt="Conjunto de intrumentos musicais em forma de vetor."/></a>
                 </figure>
             </section>
         </header>
-
         <!-- Conteúdo Principal da Página -->
         <main>
             <!-- Aba de Produtos da Tela Home -->
             <section class = "topAcordes">
                 <h2 class="titleHome"> Top Acordes </h2>
                 <div class="productLine"> <!-- "div" utilizada para englobar os cards, para ajustar seu posicionamento -->
-                    <article class="bigProductCard">
+                    <a href="product01.html" class="bigProductCard">
                         <figure>
-                            <img src="src/telaHome/violao01.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> California Vintage </h3></figcaption>
+                            <img src="src/telaHome/violao01.png" alt="Imagem de um violão como produto do site"/>
+                            <figcaption>
+                                <h3> California Vintage </h3>
+                            </figcaption>
                         </figure>
-                    </article>
-                    <article class="bigProductCard">
+                    </a>
+                    <a href="product01.html" class="bigProductCard">
                         <figure>
-                            <img src="src/telaHome/violao02.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> Colorado Auditorium </h3></figcaption>
+                            <img src="src/telaHome/violao02.png" alt="Imagem de um violão como produto do site"/>
+                            <figcaption>
+                                <h3> Colorado Auditorium </h3>
+                            </figcaption>
                         </figure>
-                    </article>
-                    <article class="bigProductCard">
+                    </a>
+                    <a href="product01.html" class="bigProductCard">
                         <figure>
-                            <img src="src/telaHome/violao03.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> California King </h3></figcaption>
+                            <img src="src/telaHome/violao03.png" alt="Imagem de um violão como produto do site"/>
+                            <figcaption>
+                                <h3> California King </h3>
+                            </figcaption>
                         </figure>
-                    </article>
-                    <article class="bigProductCard">
+                    </a>
+                    <a href="product01.html" class="bigProductCard">
                         <figure>
-                            <img src="src/telaHome/violao04.png" alt="Imagem de um violão como produto do site">
-                            <figcaption><h3> Dreadnought </h3></figcaption>
+                            <img src="src/telaHome/violao04.png" alt="Imagem de um violão como produto do site"/>
+                            <figcaption>
+                                <h3> Dreadnought </h3>
+                            </figcaption>
                         </figure>
-                    </article>
+                    </a>
                 </div>
             </section>
-
             <!-- Segundo Banner da Tela Home -->
             <section class="secondBanner">
                 <figure> <img src="src/telaHome/ukuleles.png" alt="Banner com diversos ukuleles"/> </figure>
                 <article>
                     <h2 class = "titleHome"> Sua trilha sonora de inverno </h2>
                     <p class="textHome"> Aqueça seus dias frios com os acordes do ukulele. Modelos cheios de charme, timbres e estilo durante essa estação. </p>
-                    <a class="primaryButton"> Compre agora </a>
+                    <a href="product03.html" class="primaryButton"> Compre agora </a>
                 </article>
             </section>
-            
             <!-- Aba de Categorias -->
-            <section class="category"> 
+            <section class="category">
                 <h2 class="titleHome"> Nossas Categorias </h2>
                 <div class="categoryLine"> <!-- "div" utilizada para englobar os cars, para ajustar seu posicionamento -->
-                    <a>
-                        <img src="src/telaHome/cordas.jpeg" alt="Categoria Cordas"/>
+                    <a href="products.html#strings">
+                        <img src="src/telaHome/cordas.jpeg" alt="Imagem de um violao representando a categoria de cordas."/>
                         <h3> Cordas </h3>
                     </a>
-                    <a>
-                        <img src="src/telaHome/teclados.jpeg" alt="Categoria Teclados"/>
+                    <a href="products.html#keyboards">
+                        <img src="src/telaHome/teclados.jpeg" alt="Imagem de eum piano representando a categoria de teclados."/>
                         <h3> Teclados </h3>
-                    </a>        
-                    <a>
-                        <img src="src/telaHome/eletronicos.jpeg" alt="Categoria Eletronicos"/>
+                    </a>
+                    <a href="products.html#eletronics">
+                        <img src="src/telaHome/eletronicos.jpeg" alt="Imagem de um sintetizador representando a categoria de eletrônicos."/>
                         <h3> Eletrônicos </h3>
-                    </a>        
-                    <a>
-                        <img src="src/telaHome/percusao.jpeg" alt="Categoria Percusão"/>
+                    </a>
+                    <a href="products.html#percussion">
+                        <img src="src/telaHome/percusao.jpeg" alt="Imagem de uma bateria representando a categoria de precussão."/>
                         <h3> Percussão </h3>
-                    </a>        
-                    <a>
-                        <img src="src/telaHome/sopro.jpeg" alt="Categoria Sopro"/>
+                    </a>
+                    <a href="products.html#blow">
+                        <img src="src/telaHome/sopro.jpeg" alt="Imagem de uma flauta doce representando a categoria de sopro."/>
                         <h3> Sopro </h3>
-                    </a>        
+                    </a>
                 </div>
             </section>
-
             <!-- Seção Sobre Nós -->
             <section class="aboutUs">
                 <article>
                     <h2 class="titleAboutUs"> Conheça a Virtuose por trás dos acordes </h2>
                     <p class="textAboutUs"> Mais do que uma loja, somos apaixonados por música. Descubra nossa história, valores e missão que nos movem para entregar os melhores instrumentos a você. </p>
-                    <a class="buttonAboutUs"> Compre agora </a>
+                    <a href="aboutUs.html" class="buttonAboutUs"> Compre agora </a>
                 </article>
             </section>
-
             <!-- Vantagens -->
             <section>
                 <aside class="advantages">
-                    <div class="advantage"> <!-- As divis estão sendo utilizadas durante essa seção por conta do alinhamento dposicionamento do icone e do texto dentro da tag aside.-->
+                    <div class="advantage">
+                        <!-- As "divs" estão sendo utilizadas durante essa seção por conta do alinhamento r posicionamento do icone e do texto dentro da tag aside.-->
                         <img src="icons/featuresIcons/securityIcon.svg" alt="Ícone de Segurança"/>
                         <p> Produtos certificados e testados em rigorosos testes de excelência. </p>
                     </div>
-                    <div class="advantage"> 
+                    <div class="advantage">
                         <img src="icons/featuresIcons/suportIcon.svg" alt="Ícone de Suporte"/>
                         <p> Conte com a ajuda do nosso suporte para tirar dúvidas. </p>
                     </div>
-                    <div class="advantage"> 
+                    <div class="advantage">
                         <img src="icons/featuresIcons/returnsIcon.svg" alt="Ícone de Retorno"/>
                         <p> Devolução ou troca sem burocracia em até 30 dias após a entrega. </p>
                     </div>
                 </aside>
             </section>
         </main>
-
+        <!-- Footer -->
         <footer class="footer">
             <section class = "newsLetter">
                 <h3> Não perca nada! </h3>
                 <p> Insira seu email abaixo e seja o primeiro a receber as promoções da Virtuose </p>
                 <form class="formNewsLetter">
                     <input type="email" placeholder="Insira seu email"/>
-                    <a><img src="icons/footerIcons/arrowIcon.svg" alt="Seta para direita"/></a>
+                    <a href="callCenter.html"><img src="icons/footerIcons/arrowIcon.svg" alt="Seta para direita"/></a>
                 </form>
             </section>
             <hr class="footerLine"/>
             <div class = "linksFooter"> <!-- "div" utilizada para definir e delimitar o espaço dos links no footer -->
-                <article class = "links">
+                <article class = "links"> <!-- Links do footer, o usuário pode navegar para certas páginas através deles -->
                     <h4> Produtos </h4>
                     <div class = "productsLinks"> <!-- "div" utilizada para separar a lista em dois espaços diferentes-->
                         <div> <!-- "div" usada para alinhamento -->
                             <ul>
-                                <li><a href="#"> Violões </a></li>
-                                <li><a href="#"> Guitarras </a></li>
-                                <li><a href="#"> Baixos </a></li>
-                                <li><a href="#"> Ukuleles </a></li>
+                                <li><a href="products.html"> Violões </a></li>
+                                <li><a href="products.html"> Guitarras </a></li>
+                                <li><a href="products.html"> Baixos </a></li>
+                                <li><a href="products.html"> Ukuleles </a></li>
                             </ul>
                         </div>
                         <div> <!-- "div" usada para alinhamento -->
-                            <ul>    
-                                <li><a href="#"> Baterias </a></li>
-                                <li><a href="#"> Violinos </a></li>
-                                <li><a href="#"> Teclados </a></li>
-                                <li><a href="#"> Acessórios </a></li>
+                            <ul>
+                                <li><a href="products.html"> Baterias </a></li>
+                                <li><a href="products.html"> Violinos </a></li>
+                                <li><a href="products.html"> Teclados </a></li>
+                                <li><a href="products.html"> Acessórios </a></li>
                             </ul>
                         </div>
                     </div>
@@ -185,27 +187,26 @@
                 <article class = "links">
                     <h4> Institucional </h4>
                     <ul>
-                        <li><a href="#"> Sobre nós </a></li>
-                        <li><a href="#"> Fale conosco </a></li>
-                        <li><a href="#"> Dúvidas </a></li>
-                        <li><a href="#"> Politica de privacidade </a></li>
+                        <li><a href="aboutUs.html"> Sobre nós </a></li>
+                        <li><a href="callCenter.html"> Fale conosco </a></li>
+                        <li><a href="callCenter.html"> Dúvidas </a></li>
                     </ul>
                 </article>
                 <article class = "links">
                     <h4> Conta </h4>
                     <ul>
-                        <li><a href="#"> Minha conta </a></li>
-                        <li><a href="#"> Pedidos </a></li>
+                        <li><a href="account.html"> Minha conta </a></li>
+                        <li><a href="accountOrders.html"> Pedidos </a></li>
                     </ul>
                 </article>
             </div>
             <hr class="footerLine"/>
             <section class="copyright">
                 <ul>
-                    <li><a href="#"> Política de Privacidade </a></li>
-                    <li><a href="#"> Termos e Condições </a></li>
-                    <li><a href="#"> Acessibilidade </a></li>
-                    <li><a href="#"> Contato </a></li>
+                    <li><a href="accountPrivacy.html"> Política de Privacidade </a></li>
+                    <li><a href="accountPrivacy.html"> Termos e Condições </a></li>
+                    <li><a href="accountPrivacy.html"> Acessibilidade </a></li>
+                    <li><a href="callCenter.html"> Contato </a></li>
                 </ul>
                 <h3> Copyright @2025 Samuel Miller Soares. Todos os direitos reservados </h3>
             </section>
