--- a/user/singUpAdress.html
+++ b/user/singUpAdress.html
@@ -2,41 +2,64 @@
 <html lang ="pt-br">
     <head>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title> Virtuose - Cadastro </title>
-        <link rel="stylesheet" href="style.css"> 
+        <link rel="stylesheet" href="style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
     </head>
-
     <body class="bodyLoginSingUp">
-        <main class="mainLoginSingUp">            
+        <main class="mainLoginSingUp">
             <section class="formSection">
-                <header>
-                    <h1><a href="homePage.html"><img src="icons/logoBlack.svg" alt="Logo"></a></h1>
+                <header> <!-- Header da pagina para localização da logo -->
+                    <a href="homePage.html"><img src="icons/logoBlack.svg" alt="Logo da Virtuose"/></a>
                 </header>
                 <h2> Adicione os dados do seu endereço </h2>
-                <div class="formGroup">
+                <div class="formGroup"> <!-- "div" utilizada para permitir a divisão do forms em duas partes-->
                     <form>
-                        <label for="passwordInput"> Senha </label>
-                        <input type="password" id="passwordInput" placeholder="Digite sua senha"/>
-
-                        <label for="confirmPasswordInput"> Confirme a senha </label>
-                        <input type="password" id="confirmPasswordInput" placeholder="Confime sua senha"/>
-                    
-                        <label for="confirmPasswordInput"> Confirme a senha </label>
-                        <input type="password" id="confirmPasswordInput" placeholder="Confime sua senha"/>
+                        <label for="cepInput"> CEP </label>
+                        <input type="text" id="cepInput" placeholder="Digite seu CEP"/>
+                        <label for="addressInput"> Endereço </label>
+                        <input type="text" id="addressInput" placeholder="Digite seu endereço"/>
+                        <label for="neighborhoodInput"> Bairro </label>
+                        <input type="text" id="neighborhoodInput" placeholder="Digite seu Bairro"/>
                     </form>
                     <form>
                         <label for="passwordInput"> Senha </label>
-                        <input type="password" id="passwordInput" placeholder="Digite sua senha"/>
-
+                        <input type="text" id="passwordInput" placeholder="Digite o número do logadouro"/>
                         <label for="confirmPasswordInput"> Confirme a senha </label>
-                        <input type="password" id="confirmPasswordInput" placeholder="Confime sua senha"/>
-                    
-                        <label for="confirmPasswordInput"> Confirme a senha </label>
-                        <input type="password" id="confirmPasswordInput" placeholder="Confime sua senha"/>
+                        <input type="text" id="confirmPasswordInput" placeholder="Digite o complemento do logadouro"/>
+                        <label for="stateInput"> Estado </label>
+                        <select id="stateInput">
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                        </select>
                     </form>
                 </div>
                 <a href="singUp.html" class="primaryButton"> Continuar </a>
