--- a/user/product02.html
+++ b/user/product02.html
@@ -45,6 +45,7 @@
                 </ul>
             </nav>
             <section class="productDisplay">
+                <!-- Seção de imagens do produto-->
                 <article class="productImages">
                     <figure class="asideImages">
                         <button> <img src="src/telaProduto02/baixoCostas.png" alt="Parte de trás do produto exibido." id="bassBack"/> </button>
@@ -55,6 +56,7 @@
                         <button> <img src="src/telaProduto02/baixoFrente.png" alt="Imagem do produto Baixo Baixo American Ultra II." id="bassFront"/> </button>
                     </figure>
                 </article>
+                <!-- Informação do produto-->
                 <article class="productInfo">
                     <h1> Baixo American Ultra II </h1>
                     <div class="reviewProduct">
@@ -90,6 +92,7 @@
                     </div>
                 </article>
             </section>
+            <!-- Características do prodouto -->
             <section class="productDetails">
                 <article class="specifications">
                     <h2> Caracteristicas do Produto </h2>
