--- a/user/product03.html
+++ b/user/product03.html
@@ -45,6 +45,7 @@
                 </ul>
             </nav>
             <section class="productDisplay">
+                <!-- Imagens do produto -->
                 <article class="productImages">
                     <figure class="asideImages">
                         <button> <img src="src/telaProduto03/ukuleleCostas.png" alt="Parte de trás do produto exibido." id="ukuleleBack"/> </button>
@@ -90,6 +91,7 @@
                     </div>
                 </article>
             </section>
+            <!-- Dados do produto -->
             <section class="productDetails">
                 <article class="specifications">
                     <h2> Caracteristicas do Produto </h2>
