--- a/user/product01.html
+++ b/user/product01.html
@@ -45,6 +45,7 @@
                 </ul>
             </nav>
             <section class="productDisplay">
+                <!-- Imagens do produto-->
                 <article class="productImages">
                     <figure class="asideImages">
                         <button> <img src="src/telaProduto01/violaoCostas.png" alt="Parte de trás do produto exibido." id="guitarBack"/> </button>
@@ -55,6 +56,7 @@
                         <button> <img src="src/telaProduto01/violaoFrente.png" alt="Imagem do produto Violão Acústico California Vintage."/> </button>
                     </figure>
                 </article>
+                <!-- Informações sobre o produto-->
                 <article class="productInfo">
                     <h1> Violão Acústico California Vintage </h1>
                     <div class="reviewProduct">
@@ -91,6 +93,7 @@
                 </article>
             </section>
             <section class="productDetails">
+                <!-- Tabela de características do produto-->
                 <article class="specifications">
                     <h2> Caracteristicas do Produto </h2>
                     <table>
