--- a/user/account.html
+++ b/user/account.html
@@ -35,6 +35,7 @@
         </header>
         <main class="mainAccount">
             <div class="accountGrid">
+                <!-- Aba com as opções de selação do usuário dentro da tela -->
                 <section class="userProfile">
                     <p class="userAvatar">NS</p>
                     <article class="userInfo">
@@ -71,6 +72,7 @@
                     </a>
                 </section>
             </div>
+            <!-- Aba relacionada a lateral da tela de perfil, no qual contem 3 diferentes abas -->
             <aside class="userDashboard">
                 <article class="orderSummary">
                     <h3> Resumo do Último Pedido </h3>
