--- a/user/accountAddress.html
+++ b/user/accountAddress.html
@@ -41,6 +41,7 @@
                     <li><a href="accountAddress.html"> Seus Endereços </a></li>
                 </ul>
             </nav>
+            <!-- Grupo de endereços já cadastrados dentro do site -->
             <section class="accountSectionAddress">
                 <h1 class="titleAccountSettings"> Seus endereços </h1>
                 <hr class="gapLine"/>
