--- a/user/accountOrders.html
+++ b/user/accountOrders.html
@@ -46,6 +46,7 @@
                 <hr class="gapLine"/>
                 <div class="dataOrderField">
                     <div>
+                        <!-- Primeiro pedido da página -->
                         <article class="dataField">
                             <article>
                                 <h3 class="fieldValue"> Pedido Realizado: </h3>
@@ -79,6 +80,7 @@
                             </div>
                         </article>
                     </div>
+                    <!-- Segundo pedido da página -->
                     <div>
                         <article class="dataField">
                             <article>
