--- a/user/accountOrdersTrack.html
+++ b/user/accountOrdersTrack.html
@@ -46,10 +46,11 @@
             <section class="accountSection">
                 <h1 class="titleAccountSettings"> Rastreio do pedido #VT123M@BR </h1>
                 <hr class="gapLine"/>
+                <!-- Cabeçalho da aba do pedido rastreado-->
                 <article class="dataFieldTrack">
                     <div class="productItem">
                         <figure class="conteinerImage">
-                            <img src="src/telaProduto01/violaoFrente.png" alt="Violão Acustico California Vintage" class="productImage" />
+                            <img src="src/telaProduto01/violaoFrente.png" alt="Violão Acustico California Vintage" class="productImage"/>
                         </figure>
                         <article class="productInfo">
                             <h3 class="fieldLabel"> Previsão de entrega para dia 23 de junho </h3>
@@ -57,6 +58,7 @@
                         </article>
                     </div>
                 </article>
+                <!--Conteúdo do pedido rastreado -->
                 <article class="orderSummary">
                     <article>
                         <h3> Dados da Entrega </h3>
