--- a/user/accountPrivacy.html
+++ b/user/accountPrivacy.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <title> Virtuose - Privacidade </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="style.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
@@ -45,6 +45,7 @@
                 <h1 class="titleAccountSettings"> Configurações de Privacidade </h1>
                 <hr class="gapLine"/>
                 <article class="dataField">
+                    <!-- Primeira aba de configuração -->
                     <article class="fieldInfo">
                         <h2> Configurações de Comunicação </h2>
                         <hr class="gapLine"/>
@@ -82,6 +83,7 @@
                         </div>
                     </article>
                 </article>
+                <!-- Segunda aba de Configuração-->
                 <article class="dataField">
                     <article class="fieldInfo">
                         <h2> Gerenciamento de Dados </h2>
@@ -99,6 +101,7 @@
                         <a class="settingsButton"> Excluir conta </a>
                     </article>
                 </article>
+                <!-- Parte de politicas da loja-->
                 <article class="dataField">
                     <details class="seePolitics">
                         <summary> Ver a Políticas </summary>
