--- a/user/cart.html
+++ b/user/cart.html
@@ -110,6 +110,7 @@
                     </article>
                 </article>
             </section>
+            <!-- Aba de resumo da compra já adicionada ao carrinho -->
             <aside class="orderSummary">
                 <h3 class="titlePages"> Resumo da Compra </h3>
                 <hr class="gapLine"/>
