--- a/user/singUp.html
+++ b/user/singUp.html
@@ -16,6 +16,7 @@
                     <a href="homePage.html"><img src="icons/logoBlack.svg" alt="Logo da Virtuose"/></a>
                 </header>
                 <h2> Crie sua conta </h2>
+                <!-- Formulário de Cadastro -->
                 <form>
                     <label for="nameInput"> Nome </label>
                     <input type="text" id="nameInput" placeholder="Digite seu nome completo"/>
