--- a/user/singUpAdress.html
+++ b/user/singUpAdress.html
@@ -17,6 +17,7 @@
                 </header>
                 <h2> Adicione os dados do seu endereço </h2>
                 <div class="formGroup"> <!-- "div" utilizada para permitir a divisão do forms em duas partes-->
+                    <!-- Formulário de Cadastro de endereço-->
                     <form>
                         <label for="cepInput"> CEP </label>
                         <input type="text" id="cepInput" placeholder="Digite seu CEP"/>
