--- a/user/singUpPassword.html
+++ b/user/singUpPassword.html
@@ -13,9 +13,10 @@
         <main class="mainLoginSingUp">
             <section class="formSection">
                 <header> <!-- Header da pagina para localização da logo -->
-                    <a href="homePage.html"><img src="icons/logoBlack.svg" alt="Logo da Virtuose"></a>
+                    <a href="homePage.html"><img src="icons/logoBlack.svg" alt="Logo da Virtuose"/></a>
                 </header>
                 <h2> Crie e confirme a senha </h2>
+                <!-- Formulário de criação de senha-->
                 <form>
                     <label for="passwordInput"> Senha </label>
                     <input type="password" id="passwordInput" placeholder="Digite sua senha"/>
