--- a/user/login.html
+++ b/user/login.html
@@ -16,14 +16,14 @@
             </section>
             <section class="formSection">
                 <header> <!-- Header da pagina para localização da logo -->
-                    <a href="../index.html"><img src="icons/logoBlack.svg" alt="Logo da Virtuose"></a>
+                    <a href="../index.html"><img src="icons/logoBlack.svg" alt="Logo da Virtuose"/></a>
                 </header>
                 <h2> Faça login ou crie uma conta </h2>
                 <form>
                     <label for="emailInput"> Email </label>
-                    <input type="email" id="emailInput" placeholder="Digite seu email" name="email" required/>
+                    <input type="email" id="emailInput" placeholder="Digite seu email"/>
                     <label for="passwordInput"> Senha </label>
-                    <input type="password" id="passwordInput" placeholder="Digite sua senha" name="password" required/>
+                    <input type="password" id="passwordInput" placeholder="Digite sua senha"/>
                     <p class="forgotPassword"><a href="#"> Esqueceu sua senha? </a></p>
                     <a href="homePage.html" class="primaryButton"> Fazer login </a>
                 </form>
