--- a/user/checkOut.html
+++ b/user/checkOut.html
@@ -34,8 +34,10 @@
             </nav>
         </header>
         <main class="mainCheckOut">
+            <!-- Seção de Dados -->
             <section class="dateCheckOut">
                 <article class="formSection">
+                    <!-- Sessão de dados pessoais -->
                     <h2 class="titlePages"> Dados pessoais </h2>
                     <hr/>
                     <p class="subtextCheckOut"> Altere ou adicone seu dados pessoais cadastrados em nossa loja </p>
@@ -59,6 +61,7 @@
                         </form>
                     </div>
                 </article>
+                <!-- Seção de dados de envio-->
                 <article class="formSection">
                     <h2 class="titlePages"> Forma de envio </h2>
                     <hr/>
@@ -112,6 +115,7 @@
                         </form>
                     </div>
                 </article>
+                <!-- Seção das escolhas de pagamento-->
                 <article class="formSection">
                     <h2 class="titlePages"> Forma de pagamento </h2>
                     <hr/>
