--- a/user/callCenter.html
+++ b/user/callCenter.html
@@ -41,9 +41,11 @@
                 </article>
             </section>
             <section class="contactSection">
+                <!-- Aba do Formulário do Atendimento -->
                 <article class="orderSummary">
                     <h2 class="titlePages"> Envie uma mensagem </h2>
                     <hr class="gapLine"/>
+                    <!-- Formulario de atendimento-->
                     <form class="formSection">
                         <label for="name"> Seu nome </label>
                         <input type="text" id="name" placeholder="Digite seu nome" required/>
@@ -56,6 +58,7 @@
                         <button class="primaryButton"> Enviar </button>
                     </form>
                 </article>
+                <!-- Aba de contatos gerais-->
                 <aside class="orderSummary">
                     <h2 class="titlePages"> Outros Canais </h2>
                     <hr class="gapLine"/>
@@ -85,6 +88,7 @@
                     </div>
                 </aside>
             </section>
+            <!-- Dúvidas frequentes -->
             <section class="faqSection">
                 <h2>Perguntas Frequentes</h2>
                 <div class="faqQuestions">
