--- a/admin/admins.html
+++ b/admin/admins.html
@@ -11,6 +11,7 @@
     </head>
     <body class="bodyDashboard">
         <main class="mainDashboard">
+            <!-- Aba lateral de navegação -->
             <aside class="asideBar">
                 <figure class="logo">
                     <img src="icons/logo.svg" alt="Logo da Virtuose"/>
@@ -51,6 +52,7 @@
                     </a>
                 </footer>
             </aside>
+            <!-- Aba Principal da Página -->
             <div class="mainContent">
                 <header class="pageHeader">
                     <h2 class="adminTitle"> Gerenciar Administradores </h2>
@@ -67,6 +69,7 @@
                         <h2> Lista de Administradores</h2>
                         <a href="#" class="buttonAdmin"> + Adicionar novo</a>
                     </header>
+                    <!-- Tabela da página -->
                     <div class="tableContainer">
                         <table>
                             <thead>
