--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -11,6 +11,7 @@
     </head>
     <body class="bodyDashboard">
         <main class="mainDashboard">
+            <!-- Aba lateral de navegação -->
             <aside class="asideBar">
                 <figure class="logo">
                     <img src="icons/logo.svg" alt="Logo da Virtuose"/>
@@ -51,6 +52,7 @@
                     </a>
                 </footer>
             </aside>
+            <!-- Aba Principal da Página -->
             <div class="mainContent">
                 <header class="pageHeader">
                     <h2 class="adminTitle"> Dashboard </h2>
@@ -65,39 +67,42 @@
                 <section class="mainSection">
                     <section class="statsGrid">
                         <article class="statCard">
-                            <img src="icons/statsIcons/sells.svg" alt="">
+                            <img src="icons/statsIcons/sells.svg" alt="Ícone de Vendas">
                             <div class="statInfo">
                                 <h3 class="statValue"> R$ 45.876 </h3>
                                 <p class="statLabel"> Vendas (Mês) </p>
                             </div>
                         </article>
                         <article class="statCard">
-                            <img src="icons/statsIcons/newOrders.svg" alt="">
+                            <img src="icons/statsIcons/newOrders.svg" alt="ícone de pedidos">
                             <div class="statInfo">
                                 <h3 class="statValue"> 34 </h3>
                                 <p class="statLabel"> Novos Pedidos </p>
                             </div>
                         </article>
                         <article class="statCard">
-                            <img src="icons/statsIcons/newClients.svg" alt="">
+                            <img src="icons/statsIcons/newClients.svg" alt="ícon de clientes">
                             <div class="statInfo">
                                 <h3 class="statValue"> 17 </h3>
                                 <p class="statLabel"> Novos Clientes </p>
                             </div>
                         </article>
                         <article class="statCard">
-                            <img src="icons/statsIcons/pendingOrders.svg" alt="">
+                            <img src="icons/statsIcons/pendingOrders.svg" alt="Ícone de pendencias">
                             <div class="statInfo">
                                 <h3 class="statValue"> 6 </h3>
                                 <p class="statLabel"> Pedidos Pendentes </p>
                             </div>
                         </article>
                     </section>
+                    <!-- Paineis de Informação-->
                     <section class="panelsGrid">
+                        <!-- Gráfico-->
                         <article class="contentPanel largePanel">
                             <h3>Vendas nos últimos 6 meses</h3>
                             <img src="scr/graph.png" alt="Gráfico de vendas dos ultimos 6 meses">
                         </article>
+                        <!-- Alterações Recentes -->
                         <article class="contentPanel smallPanel">
                             <h3> Atividade Recente </h3>
                             <ul>
