--- a/admin/orders.html
+++ b/admin/orders.html
@@ -11,6 +11,7 @@
     </head>
     <body class="bodyDashboard">
         <main class="mainDashboard">
+            <!-- Aba lateral de navegação -->
             <aside class="asideBar">
                 <figure class="logo">
                     <img src="icons/logo.svg" alt="Logo da Virtuose"/>
@@ -51,6 +52,7 @@
                     </a>
                 </footer>
             </aside>
+            <!-- Aba Principal da Página -->
             <div class="mainContent">
                 <header class="pageHeader">
                     <h2 class="adminTitle"> Gerenciar Pedidos </h2>
@@ -69,6 +71,7 @@
                             <a href="#">Ver todos os pedidos</a>
                         </article>
                     </header>
+                    <!-- Tabela da página -->
                     <div class="tableContainer">
                         <table>
                             <thead>
