--- a/admin/products.html
+++ b/admin/products.html
@@ -11,6 +11,7 @@
     </head>
     <body class="bodyDashboard">
         <main class="mainDashboard">
+            <!-- Aba lateral de navegação -->
             <aside class="asideBar">
                 <figure class="logo">
                     <img src="icons/logo.svg" alt="Logo da Virtuose"/>
@@ -62,6 +63,7 @@
                         </article>
                     </div>
                 </header>
+                <!-- Aba Principal da Página -->
                 <section class="productsSection">
                     <header class="sectionHeader">
                         <article class="groupAboutProducts">
@@ -70,6 +72,7 @@
                         </article>
                         <a href="#" class="buttonAdmin"> + Adicionar novo produto </a>
                     </header>
+                    <!-- Tabela da página -->
                     <div class="tableContainer">
                         <table>
                             <thead>
